--- a/index.html
+++ b/index.html
@@ -35,20 +35,22 @@
     <input type="submit" name="start_timer" value="Start">
   </form>
 
-  <div class="timer-view" id="progress-bar">
-    <div class="pomodoro">
-      <p><span id='pomodoro'>30</span>m</p>
+  <div class="timer hide" id="timer">
+    <div class="timer-view" id="progress-bar">
+      <div class="pomodoro">
+        <p><span id='pomodoro'>30</span>m</p>
+      </div>
+      
+      <div class="break">
+        <p><span id='break'>10</span>m</p>
+      </div>
+  
+      <div class="pomodoro">
+        <p><span id='pomodoro'>30</span>m</p>
+      </div>
     </div>
-    
-    <div class="break">
-      <p><span id='break'>10</span>m</p>
-    </div>
-
-    <div class="pomodoro">
-      <p><span id='pomodoro'>30</span>m</p>
-    </div>
+  
+    <button class="reset-btn" id="reset-timer">Reset timer</button>
   </div>
-
-  <button class="reset-btn">Reset timer</button>
 </body>
 </html>
